# pipeprobe

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pipeprobe-ci.yml
examples/: dbt_rag_eval.py
pipeprobe/: __init__.py  cli.py  models.py  pytest_plugin.py  suite.py
pipeprobe/connectors/: airflow_connector.py  dbt_connector.py  snowflake_connector.py  spark_analyzer.py
pipeprobe/judges/: __init__.py  base.py  claude_judge.py  openai_judge.py  prompts.py
pipeprobe/metrics/: sql_metrics.py
pipeprobe/reporters/: html_reporter.py  regression_tracker.py  slack_notifier.py  terminal_reporter.py
probes/: dbt_rag.yaml  my_ai.py
tests/: test_pipeprobe.py
